Update lancement.md